# pendulum_feasibility_solver

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
include/pendulum_feasibility_solver/: feasibility_solver.h  polygons.h
src/: CMakeLists.txt  feasibility_solver.cpp  polygons.cpp  steps_solver.cpp  timing_solver.cpp
tests/: CMakeLists.txt  bench-config.in.cpp  bench-feasibility-solver.cpp  common.h  feasibility-inputs-simulation.yaml  run-feasibility-solver.cpp
